updates to styles and header logo

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://abstractionjackson.com'
 languageCode = 'en-us'
-title = 'Software Engineering Portfolio'
+title = 'Portfolio'
 theme = 'folio'
